PROJECT(wrapper)
CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)

IF (NOT EMBREE_PROJECT_COMPILATION)
  FIND_PACKAGE(embree REQUIRED)
ENDIF()

IF (EMBREE_SYCL_SUPPORT)
  SET(CMAKE_CXX_STANDARD 17)
ENDIF()

IF (EMBREE_GEOMETRY_USER)
  
    add_library(wrapper SHARED wrapper.cpp)

    SET_PROPERTY(TARGET wrapper PROPERTY FOLDER wrapper)
    SET_TARGET_PROPERTIES(wrapper PROPERTIES LIBRARY_OUTPUT_DIRECTORY "C:/test/" RUNTIME_OUTPUT_DIRECTORY "C:/test/")
    target_link_libraries(wrapper embree)


ENDIF()
